--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Jatha Kalise</string>
+    <string name="title_activity_maps">Venue</string>
+    <string name="player_error">Error initializing YouTube player: %s</string>
+    <string name="BLESS_URL">http://54.186.67.253/cykul/blessings.php</string>
 </resources>
